# GMR

./: .gitignore  WildRobot_Guidance.md  pyproject.toml
general_motion_retargeting/: motion_retarget.py  params.py
general_motion_retargeting/ik_configs/: smplx_to_wildrobot.json
scripts/: batch_convert_to_amp.py  batch_retarget_walking.py  convert_to_amp_format.py  render_robot_motion.py  smplx_to_robot.py  smplx_to_robot_headless.py
